--- a/index.html
+++ b/index.html
@@ -1,24 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width">
-		<title>Geog 575 Boilerplate</title>
+	    <meta charset="utf-8">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
+	    <meta name="description" content="">
+	    <meta name="author" content="">
+
+	    <title>US Student Debt</title>
 
 		<!--put your external stylesheet links here-->
+		<link href="css/bootstrap.css" rel="stylesheet">
+		<!-- <link href="css/one-page-wonder.css" rel="stylesheet"> -->
 		<link rel="stylesheet" href="css/style.css"/>
+
 		<!--[if IE<9]>
 			<link rel="stylesheet" href="css/style.ie.css">
 		<![endif]-->
 	</head>
 
 	<body>
-		<!--put your initial page content here-->
-		<div id="content"></div>
-		<!--you can also use this space for internal scripts or stylesheets;
-		place these within <script> or <style> tags-->
 
-		<!--put your external script links here-->
+
+		<!-- Navigation -->
+<!-- 	    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	        <div class="container"> -->
+	            <!-- Brand and toggle get grouped for better mobile display -->
+<!-- 	            <div class="navbar-header">
+	                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	                    <span class="sr-only">Toggle navigation</span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                </button>
+	                <a class="navbar-brand" href="#">Start Bootstrap</a>
+	            </div> -->
+	            <!-- Collect the nav links, forms, and other content for toggling -->
+<!-- 	            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	                <ul class="nav navbar-nav">
+	                    <li>
+	                        <a href="#about">About</a>
+	                    </li>
+	                    <li>
+	                        <a href="#services">Services</a>
+	                    </li>
+	                    <li>
+	                        <a href="#contact">Contact</a>
+	                    </li>
+	                </ul>
+	            </div> -->
+	            <!-- /.navbar-collapse -->
+	      <!--   </div> -->
+	        <!-- /.container -->
+	  <!--   </nav> -->
+
+		<!--Initial page content-->
+		<div id="content"></div>
+
+		<!--External script links-->
+		<!-- jQuery -->
+    	<script type="text/javascript" src="lib/bootstrap/jquery.js"></script>
+
+    	<!-- Bootstrap Core JavaScript -->
+   		<script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
+
 		<script type="text/javascript" src="lib/d3/d3.js"></script>
 		<script type="text/javascript" src="lib/d3-queue/d3-queue.js"></script>
 		<script type="text/javascript" src="lib/topojson/topojson.js"></script>
