Work on module 9
Color the map and create the chart container

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 	  <!--   </nav> -->
 
 		<!--Initial page content-->
-		<div id="content"></div>
+		<div id="content" class ="img-responsive"></div>
+		<!-- <div id="chartContainer" class ="img-responsive pull-right"></div> -->
 
 		<!--External script links-->
 		<!-- jQuery -->
@@ -64,6 +65,7 @@
     	<!-- Bootstrap Core JavaScript -->
    		<script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
 
+		<script type="text/javascript" src="lib/simple_statistics.min.js"></script>
 		<script type="text/javascript" src="lib/d3/d3.js"></script>
 		<script type="text/javascript" src="lib/d3-queue/d3-queue.js"></script>
 		<script type="text/javascript" src="lib/topojson/topojson.js"></script>
