Module 9 assignment completed
Module 9 complete

--- a/index.html
+++ b/index.html
@@ -55,14 +55,12 @@
 	  <!--   </nav> -->
 
 		<!--Initial page content-->
-		<div id="content" class ="img-responsive"></div>
+		<div id="content"></div>
 		<!-- <div id="chartContainer" class ="img-responsive pull-right"></div> -->
 
 		<!--External script links-->
 		<!-- jQuery -->
     	<script type="text/javascript" src="lib/bootstrap/jquery.js"></script>
-
-    	<!-- Bootstrap Core JavaScript -->
    		<script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
 
 		<script type="text/javascript" src="lib/simple_statistics.min.js"></script>
