--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 	        <!-- /.container -->
 	  <!--   </nav> -->
 
-		<div id="title"></div>
+		<div id="title">The Cost of Education</div>
+		<div id='chartTitle'></div>
 		<div id="wrapper">
 			<div id="content" class ="img-responsive"></div>
 			<div id="chartContainer" class ="img-responsive"></div> 
