Map color change
Styling still needed

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	        <!-- /.container -->
 	  <!--   </nav> -->
 
-		<div id="title">The Cost of Education</div>
+		<div id="title">The Cost of a US Education</div>
 		<div id='chartTitle'></div>
 		<div id="wrapper">
 			<div id="content" class ="img-responsive"></div>
@@ -62,10 +62,11 @@
 		</div>
 
 		<div id="panel">
-			<p>On sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. Plusieurs versions sont apparues avec le temps, parfois par accident, souvent intentionnellement (histoire d'y rajouter de petits clins d'oeil, voire des phrases embarassantes).
+			<p>Student debt is a growing problem for many people graduating from US universities. Over two-thirds of students have some amount of debt when they graduate. The Institute for College Access and Success estimates that the average debt for graduating seniors is $26,000. In order to repay their debt over a 10 year period at a 3.8% interest rate, it will cost the borrower approximately $320 a month. Furthermore, over the 10 year repayment term, the borrow ends up having to repay $38,000 due to compounding interest. This limits their savings and results in them having difficulties buying a home or starting a family. This map investigates how multiple variables related to student debt and income may be related.
 			</p>
+			<div id='variableheader'><h5>Select a Variable</h5></div>
 			<select class="dropdown">
-				<option class="titleOption" disabled="true">Select Attribute</option>
+				<!-- <option class="titleOption" disabled="true">Select Attribute</option> -->
 			</select>
 
 		</div>
