--- a/index.html
+++ b/index.html
@@ -21,40 +21,7 @@
 
 	<body>
 
-
-		<!-- Navigation -->
-<!-- 	    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-	        <div class="container"> -->
-	            <!-- Brand and toggle get grouped for better mobile display -->
-<!-- 	            <div class="navbar-header">
-	                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-	                    <span class="sr-only">Toggle navigation</span>
-	                    <span class="icon-bar"></span>
-	                    <span class="icon-bar"></span>
-	                    <span class="icon-bar"></span>
-	                </button>
-	                <a class="navbar-brand" href="#">Start Bootstrap</a>
-	            </div> -->
-	            <!-- Collect the nav links, forms, and other content for toggling -->
-<!-- 	            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	                <ul class="nav navbar-nav">
-	                    <li>
-	                        <a href="#about">About</a>
-	                    </li>
-	                    <li>
-	                        <a href="#services">Services</a>
-	                    </li>
-	                    <li>
-	                        <a href="#contact">Contact</a>
-	                    </li>
-	                </ul>
-	            </div> -->
-	            <!-- /.navbar-collapse -->
-	      <!--   </div> -->
-	        <!-- /.container -->
-	  <!--   </nav> -->
-
-		<div id="title">The Cost of a US Education</div>
+		<div id="title">The Cost of Education</div>
 		<div id='chartTitle'></div>
 		<div id="wrapper">
 			<div id="content" class ="img-responsive"></div>
@@ -62,7 +29,7 @@
 		</div>
 
 		<div id="panel">
-			<p>Student debt is a growing problem for many people graduating from US universities. Over two-thirds of students have some amount of debt when they graduate. The Institute for College Access and Success estimates that the average debt for graduating seniors is $26,000. In order to repay their debt over a 10 year period at a 3.8% interest rate, it will cost the borrower approximately $320 a month. Furthermore, over the 10 year repayment term, the borrow ends up having to repay $38,000 due to compounding interest. This limits their savings and results in them having difficulties buying a home or starting a family. This map investigates how multiple variables related to student debt and income may be related.
+			<p>Debt is a growing problem for many students graduating from US universities. Over two-thirds of students have some amount of debt when they graduate. The Institute for College Access and Success estimates that the average debt for graduating seniors is $26,000. In order to repay their debt over a 10 year period at a 3.8% interest rate, it will cost the borrower approximately $320 a month. Furthermore, over the 10 year repayment term, the borrow ends up having to repay $38,000 due to compounding interest. This limits their savings and results in them having difficulties buying a home or starting a family. This map investigates how multiple variables related to student debt and income may be related.
 			</p>
 			<div id='variableheader'><h5>Select a Variable</h5></div>
 			<select class="dropdown">
